# pytorch-class

./: .gitignore  README.md  main.py  pyproject.toml
module_1/ungraded_1/: C1_M1_Lab_1_simple_nn.ipynb
module_1/ungraded_2/: C1_M1_Lab_2_activation_functions.ipynb
module_1/ungraded_3/: C1_M1_Lab_3_tensors.ipynb
module_2/graded/: C1M2_Assignment.ipynb
module_2/ungraded_1/: C1_M2_Lab_1_mnist_classifier.ipynb
module_3/graded/: C1M3_Assignment.ipynb
module_3/ungraded_1/: C1_M3_Lab_data_management.ipynb
module_4/graded/: C1M4_Assignment.ipynb
module_4/ungraded/: C1_M4_Lab_1_cnn_nature_classifier.ipynb
module_4/ungraded_2/: C1_M4_Lab_2_debugging.ipynb
module_advanced_arch_1/: python_code_runner.ipynb  resnet50_from_scratch.py
module_advanced_arch_1/graded/: C3M1_Assignment.ipynb
module_advanced_arch_1/ungraded_1/: C3_M1_Lab_1_siamese_network.ipynb  helper_utils.py
module_advanced_arch_2/graded/: C3M2_Assignment.ipynb  helper_utils.py  unittests.py
module_advanced_arch_2/ungraded_2/: C3_M2_Lab_3_stable_diffusion.ipynb
