[project]
name = "pytorch-class"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.2.0",
    "matplotlib==3.8.0",
    "ipython>=9.11.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "dlai-grader>=2.3.0",
    "torchvision>=0.17.0",
    "pillow>=12.0.0",
    "scikit-learn>=1.8.0",
    "numpy>=1.26.4",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "directory-tree>=1.0.0",
    "fastai<2.8",
]
